# python_kunskapskontroll

./: .gitignore  README.md
diamonds_analys/: .gitignore  diamond_app.py  diamonds.ipynb  main.py  pyproject.toml
teori_del_01/: del1_teoretiska_fragor.ipynb  main.py  pyproject.toml
