[project]
name = "diamonds-analys"
version = "0.1.0"
description = "Min diamant analys"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "streamlit>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "jupyter>=1.1.1"  # Behåll om du fortfarande använder Jupyter lokalt
]
